[package]

name = "solver"
version = "0.0.1"
authors = ["cnpls"]
license = "MIT"
description = "Solver Library"
repository = "https://github.com/cnpls/solver-rs.git"
homepage = "https://github.com/cnpls/solver-rs.git"
readme = "README.md"
keywords = [
    "solver"
]
categories = [
    "science", 
    "mathematics",
    "engineering"
]
exclude = [".vscode/", "Vagrantfile", "vm-bootstrap.sh"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
ndarray = "0.13.0"
