[package]

name = "solver"
version = "0.0.2"
authors = ["cnpls", "chrispryer"]
license = "MIT"
description = "Solver Library"
repository = "https://github.com/andromia/solver-rs.git"
homepage = "https://github.com/andromia/solver-rs.git"
readme = "README.md"
keywords = [
    "solver"
]
categories = [
    "science", 
    "mathematics",
]
exclude = [".vscode/", "Vagrantfile", "vm-bootstrap.sh"]

[package.metadata.docs.rs]
features = ["std"]

[dependencies]
